<resources>
    <string name="app_name">Founders Company</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Founders company</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="techno_sector">Technological sector</string>
    <string name="car_sector">Mechanical engineering sector</string>
    <string name="bank_sector">Bank sector</string>
    <string name="oil_gas_sector">Oil and gas sector</string>
    <string name="search">Search</string>
    <string name="info_app">About the app</string>
    <string name="google">Компания основана Ларри Пейджем и Сергеем Брином. Впервые она была зарегистрирована как частная компания 4 января 1996 года, а 19 августа 2004 года начала продажу своих акций на фондовом рынке.</string>
    <string name="apple">Основателими компании являются Стив Джобс и Стив Возняк, а также Рон Уэйн, который продал 10% своих акций уже череез полторы недели после запуска компании. Компания была зарегистрирована в 1976 году под названием Apple Computer Inc. </string>
    <string name="yandex">Компания основана Аркадием Воложом и Сергеем Сегаловичем. Поисковая система Yandex.ru была официально анонсирована 23 сентября 1997 года и первое время развивалась в рамках компании CompTek International. Как отдельная компания «Яндекс» образовалась в 2000 году. В мае 2011 года «Яндекс» провёл первичное размещение акций, заработав на этом больше, чем какая-либо из интернет-компаний со времён IPO-поисковика Google в 2004 году.</string>
    <string name="microsoft">Компания начинает свою историю с 1975 года, когда друзья-студенты Гарварда Билл Гейтс и Пол Аллен, прочитав опубликованную 1 января 1975 года в журнале «Popular Electronics» статью о новом персональном компьютере Altair 8800, разработали для него интерпретатор языка Basic. Через месяц, 1 февраля, было подписано лицензионное соглашение с компанией Micro Instrumentation and Telemetry Systems (англ.) (MITS), производителем этого ПК, об использовании Basic в составе ПО для Altair. Свою компанию они думали назвать «Аллен и Гейтс», но посчитали, что это больше подходит для юридической конторы, и тогда Пол предложил — «Micro-Soft», от «microcomputer» и «software».</string>
    <string name="amazon">В конце 1994 года, в ходе путешествия через страну из Нью-Йорка в Сиэтл, Джефф Безос основал интернет-магазин Amazon.com, первоначальные инвестиции в который составили 300 тыс. долларов. Сайт был запущен 16 июля 1995 года, хотя на тот момент он не был до конца закончен: к примеру, на нём можно было заказать отрицательное количество книг. Безос мотивировал это необходимостью опередить конкурентов. Компания начиналась как книжный онлайн-магазин и расширилась до продажи большого ассортимента продуктов и сервисов, включая видео- и аудиотрансляции. В 1997 году компания вышла на IPO. В 1999 году американский журнал Time назвал Безоса человеком года.</string>
    <string name="meta">Марк Цукерберг учился в Гарвардском университете, где в феврале 2004 года запустил социальную сеть Facebook вместе со своими соседями по общежитию. В мае 2012 года Цукерберг вывел компанию на биржу с контрольным пакетом акций. В 2007 году, в возрасте 23 лет, он стал самым молодым в мире миллиардером. На октябрь 2021 года состояние Цукерберга составляло 122 миллиарда долларов, что делает его 5-м самым богатым человеком в мире. Также по версии Bloomberg, в 2020 году располагается на 5-м месте в списке самых богатых людей мира с состоянием 104 млрд долларов США. В 2021 году компания Facebook была переименована в Meta.</string>
    <string name="netflix">Основана 29 августа 1997 года Ридом Хастингсом и Марком Рэндольфом. Штаб-квартира находится в Лос-Гатосе, Калифорния. С 2013 года Netflix производит собственные фильмы и сериалы, в том числе и анимационные, а также телепрограммы. В 2016 году компания выпустила 126 оригинальных сериалов и фильмов — больше, чем любой другой сетевой или кабельный канал. Их усилия по производству нового контента, обеспечению прав на дополнительный контент и диверсификации через 190 стран потребовали дополнительных капиталов, привлекаемых в том числе через займы. Суммарный долг в 2016 году составил 16,8 млрд долларов, по состоянию на сентябрь 2017 года он был уже 21,9 млрд долларов. При этом 6,5 миллиарда долларов — это долгосрочный долг, а остальная часть — долгосрочные обязательства. В октябре 2018 года Netflix объявила о привлечении ещё 2 миллиардов долларов для финансирования нового контента. По состоянию на январь 2021 года у компании насчитывается 203,7 млн подписчиков по всему миру, при этом компания потратила 11,8 млрд долларов на создание контента в 2020 году.</string>
    <string name="youtube">YouTube был создан в феврале 2005 года Стивом Ченом, Чадом Хёрдли и Джаведом Каримом — тремя бывшими работниками PayPal в Сан-Бруно, Калифорния. Они использовали технологию Flash Video, позволяющую получить относительно хорошее качество записи при небольшом объёме передаваемых данных.Самое первое видео — 19-секундный ролик любительской съёмки Джаведа Карима в зоопарке Сан-Диего — было размещено на YouTube 23 апреля 2005 года в 20:27 по местному времени.В ноябре 2006 года была завершена покупка YouTube компанией Google за 1,65 миллиарда долларов.</string>
    <string name="brains">JetBrains основана в 2000 году. Главный офис расположен в Праге. Основатели: Сергей Дмитриев, Евгений Беляев и Валентин Кипятков. В 2000ых годах Евгений Беляев вышел из состава учредителей компании. По состоянию на 2019 год офисы компании находятся в Праге, Санкт-Петербурге, Амстердаме, Бостоне, Москве, Мюнхене и Новосибирске. Наиболее известный продукт JetBrains — интегрированная среда разработки IntelliJ IDEA.В 2009 году JetBrains открыла код платформы IntelliJ, на которой основана IntelliJ IDEA, и выпустила бесплатную версию IntelliJ IDEA Community Edition.С 2010 года компания разрабатывает язык программирования Kotlin. В мае 2017 года компания Google сообщила, что включает поддержку Kotlin в Android Studio 3.0 — официальный инструмент разработки для ОС Android.</string>
    <string name="tesla">Компания была основана в июле 2003 года Мартином Эберхардом и Марком Тарпеннингом, но нынешнее руководство компании называет сооснователями Илона Маска, Джеффри Брайана Страубела и Иэна Райта. В 2019 году Tesla стала крупнейшим производителем электромобилей в мире. Седан Tesla Model 3 стал самым продаваемым электромобилем в истории, преодолев отметку 800 тысяч. В 2021 году Tesla вышла на первое место по капитализации среди автомобильных компаний, обойдя японского автопроизводителя Toyota. В конце октября 2021 года капитализация Tesla впервые превысила 1 трлн долларов.</string>
    <string name="ford">В 1893 году в свободное от работы время Генри Форд сконструировал свой первый автомобиль. С 1899 по 1902 год был совладельцем «Детройтской автомобильной компании», но из-за разногласий с остальными владельцами фирмы ушёл из неё и в 1903 году основал свою компанию — Форд мотор компани, которая первоначально выпускала автомобили под маркой Ford A.</string>
    <string name="merc">История марки Mercedes-Benz слагается из историй двух известных немецких автомобильных компаний — Benz &amp; Cie. (основана Карлом Бенцем в 1883 году) и Daimler-Motoren-Gesellschaft (основана Готлибом Даймлером в 1890 году). Обе компании развивались самостоятельно до 1926 года, когда они объединились в единый концерн Daimler-Benz, впоследствии переименованный в Daimler AG.</string>
    <string name="bmw">Промышленная фирма была основана Карлом Фридрихом Раппом в октябре 1916 года, официально компания BMW была зарегистрирована 20 июля 1917 года, но первоначально — как производитель авиационных двигателей, Bayerische Flugzeug-Werke. Округ Мюнхена — Milbertshofen был выбран потому, что он располагался близко от Flugmaschinenfabrik Густава Отто — немецкого производителя самолётов.</string>
    <string name="toyota">В 1924 году Сакити Тоёда изобрел автоматический ткацкий станок Тойода модель G. Принцип дзидока, означающий, что машина останавливается сама, когда возникает проблема, стал позже частью производственной системы Тойоты. Ткацкие станки собирались на небольшой производственной линии. В 1929 году патент на автоматический ткацкий станок был продан британской компании, полученная от продажи сумма стала стартовым капиталом для развития автомобильного производства. Toyota Motor Co., Ltd. была основана в качестве самостоятельной компании в 1937 году. Несмотря на то, что фамилия основателей компании звучит как Тоёда, для упрощения произношения и в качестве символа отделения деловой деятельности от семейной жизни, компании было решено дать имя «Тоёта».</string>
    <string name="wagen">История Volkswagen началась осенью 1933 года в одном из залов отеля «Кайзерхоф» (нем. Kaiserhof) в Берлине. Собеседников было трое: Адольф Гитлер (нем. Adolf Hitler), Якоб Верлин (нем. Jacob Werlin), представитель «Daimler-Benz» и Фердинанд Порше (нем. Ferdinand Porsche). Гитлер выдвинул требование: создать для немецкого народа крепкий и надёжный автомобиль стоимостью не более 1000 рейхсмарок. Также, автомобиль должен был собираться и на новом, олицетворяющем новую Германию. 28 мая 1937 года основана компания «Gesellschaft zur Vorbereitung des Deutschen Volkswagens GmbH» («Общество с ограниченной ответственностью по подготовке Немецкого народного автомобиля») и, уже позже, 16 сентября 1938 года, переименована в Volkswagenwerk GmbH. 26 мая 1938 года был заложен первый камень на строительстве завода Volkswagen рядом с городом Фаллерслебен. В церемониальной речи Гитлер озвучивает имя будущего «народного автомобиля» — KdF-Wagen, названного в честь KdF (Kraft durch Freude) — нацистской общественной организации, вложившей порядка 50 млн рейхсмарок в строительство завода. В том же году было начато строительство городка для проживания работавших на заводе Volkswagen — Stadt des KdF-Wagens. Название в 1945 году изменили на Вольфсбург (по имени находившегося по соседству замка Вольфсбург).</string>
    <string name="honda">японская публичная многонациональная корпорация, основанная в 1948 году изобретателем и предпринимателем Соитиро Хондой и финансистом Такэо Фудзисавой, известная прежде всего как производитель автомобилей, мотоциклов и силового оборудования. Honda является крупнейшим производителем мотоциклов в мире с 1959 года, достигнув 400 миллионов произведённых мотоциклов к концу 2019, а также крупнейший в мире производитель двигателей внутреннего сгорания, производящий более 14 миллионов двигателей внутреннего сгорания ежегодно. В 2001 году Honda стала вторым по величине японским производителем автомобилей. В 2015 году Honda была восьмым по величине производителем автомобилей в мире.</string>
    <string name="gm">Основатель General Motors – предприниматель Уильям Крапо Дюрант сколотил себе состояние в водопроводной компании города Флинт, а затем занялся производством конных экипажей, организовав собственную фирму. В 1904 г. он приобрел автомобилестроительную Buick Motor Car Company и занялся ее реорганизацией. Четыре года спустя бизнесмен решил, что пришло время для создания крупной автомобильной корпорации, и прикупил еще одну марку – Oldsmobile. Buick на тот момент выпускал около 9000 автомобилей в год, Oldsmobile – чуть более 1000. Свое новое детище Дюрант назвал General Motors Company.</string>
</resources>