<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/techno"
            android:icon="@drawable/ic_tech"
            android:title="@string/techno_sector" />
        <item
            android:id="@+id/car"
            android:icon="@drawable/ic_car"
            android:title="@string/car_sector" />
        <item
            android:id="@+id/bank"
            android:icon="@drawable/ic_bank"
            android:title="@string/bank_sector" />

        <item
            android:id="@+id/oil_gas"
            android:icon="@drawable/ic_oil"
            android:title="@string/oil_gas_sector" />
    </group>

    <item android:title="Various">
        <menu>
            <item
                android:id="@+id/info_app"
                android:icon="@drawable/ic_info"
                android:title="@string/info_app" />
        </menu>
    </item>
</menu>